--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/styles": "^4.1.2",
+    "@react-google-maps/api": "^1.3.0",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
-    "@react-google-maps/api": "^1.2.3-alpha.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -35,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.36.0"
+    "@types/googlemaps": "^3.36.0",
+    "@types/node-fetch": "^2.3.7",
+    "node-fetch": "^2.6.0"
   }
 }
