Script to generate final json files

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_MAPS_KEY=AIzaSyB6ifPnIthg1yzg04vLNPYOS9gOTZNEIcg
+CLOUDINARY_URL=cloudinary://769745177826145:j55enE7r8kj0hFQNdvRi5PizU1s@dfvygwmml
