--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
   "devDependencies": {
     "@types/googlemaps": "^3.36.0",
     "@types/node-fetch": "^2.3.7",
+    "cloudinary": "^1.14.0",
+    "dotenv": "^8.0.0",
+    "fs-extra": "^8.1.0",
+    "js-yaml": "^3.13.1",
+    "lodash.uniq": "^4.5.0",
+    "most-common": "^1.3.1",
     "node-fetch": "^2.6.0"
   }
 }
