--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
+    "classnames": "^2.2.6",
+    "lodash.throttle": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -36,7 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.8",
     "@types/googlemaps": "^3.36.0",
+    "@types/lodash": "^4.14.135",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/node-fetch": "^2.3.7",
     "cloudinary": "^1.14.0",
     "dotenv": "^8.0.0",
