--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^8.0.0",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
+    "line-by-line": "^0.1.6",
     "lodash.uniq": "^4.5.0",
     "most-common": "^1.3.1",
     "node-fetch": "^2.6.0"
