--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/styles": "^4.1.2",
-    "@react-google-maps/api": "^1.3.0",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
@@ -13,7 +12,9 @@
     "lodash.throttle": "^4.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-mapbox-gl": "^4.4.0",
     "react-scripts": "3.0.1",
+    "react-use-dimensions": "^1.2.1",
     "typescript": "3.4.5"
   },
   "scripts": {
@@ -43,6 +44,7 @@
     "@types/googlemaps": "^3.36.0",
     "@types/lodash": "^4.14.135",
     "@types/lodash.throttle": "^4.1.6",
+    "@types/mapbox-gl": "^0.51.9",
     "@types/node-fetch": "^2.3.7",
     "cloudinary": "^1.14.0",
     "dotenv": "^8.0.0",
