--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "classnames": "^2.2.6",
     "lodash.throttle": "^4.1.1",
+    "mapbox-gl": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-mapbox-gl": "^4.4.0",
@@ -40,7 +41,9 @@
   },
   "devDependencies": {
     "@spatial/simplify": "^1.0.4",
+    "@turf/turf": "^5.1.6",
     "@types/classnames": "^2.2.8",
+    "@types/geojson": "^7946.0.7",
     "@types/googlemaps": "^3.36.0",
     "@types/lodash": "^4.14.135",
     "@types/lodash.throttle": "^4.1.6",
