--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.14",
     "lodash.throttle": "^4.1.1",
     "mapbox-gl": "^1.1.0",
     "react": "^16.8.6",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-json": "ts-node --compiler-options '{\"module\":\"commonjs\"}' src/scripts/generate.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,10 +44,14 @@
     "@spatial/simplify": "^1.0.4",
     "@turf/turf": "^5.1.6",
     "@types/classnames": "^2.2.8",
+    "@types/dotenv": "^6.1.1",
+    "@types/fs-extra": "^8.0.0",
     "@types/geojson": "^7946.0.7",
     "@types/googlemaps": "^3.36.0",
+    "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.135",
     "@types/lodash.throttle": "^4.1.6",
+    "@types/lodash.uniq": "^4.5.6",
     "@types/mapbox-gl": "^0.51.9",
     "@types/node-fetch": "^2.3.7",
     "cloudinary": "^1.14.0",
@@ -53,8 +59,7 @@
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
     "line-by-line": "^0.1.6",
-    "lodash.uniq": "^4.5.0",
-    "most-common": "^1.3.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "ts-node": "^8.3.0"
   }
 }
